--- a/client-app/src/index.css
+++ b/client-app/src/index.css
@@ -2,4 +2,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  font-size: 15px;
+  color: #292b2c;
+  background-color: #EFEDEF;
+  padding-top: 60px;
+}
+
+* {
+  box-sizing: border-box;
 }
