--- a/client-app/src/index.css
+++ b/client-app/src/index.css
@@ -4,7 +4,7 @@ body {
   font-family: sans-serif;
   font-size: 15px;
   color: #292b2c;
-  background-color: #EFEDEF;
+  background-color: #bdbacc;
   padding-top: 60px;
 }
 
